# 2023-Q3-until-2024-Q2

./: .gitignore  README.md
.github/workflows/: main.yml  tests.yml
2023-Q3-olio-ohjelmointi/: README.md
2023-Q3-olio-ohjelmointi/viikko1/: finnish.h
2023-Q3-olio-ohjelmointi/viikko3/italianchef/: CMakeLists.txt  chef.cpp  italianchef.cpp
2024-Q1-pilvipalvelut/: package-lock.json
2024-Q1-pilvipalvelut/react-test/: package-lock.json
2024-Q1-pilvipalvelut/reactitesti/: package-lock.json  package.json
2024-Q1-pilvipalvelut/tests/: testing-simple-robot-case1.txt  testing-simple-robot-case2.txt
2024-Q1-pilvipalvelut/week5/: test.json  test.txt  video.txt
2024-Q1-web-sovellukset/: .gitignore  README.md
2024-Q1-web-sovellukset/harkka/: about-api-key.txt  index.html  pelaa.html  random.html  ruoki.html  ulkoile.html
2024-Q1-web-sovellukset/viikko1/: index.html  styles.css
2024-Q1-web-sovellukset/viikko2/: index.html
2024-Q1-web-sovellukset/viikko3/: index.html
2024-Q1-web-sovellukset/viikko4/: index.html
2024-Q1-web-sovellukset/viikko5/: index.html
2024-Q1-web-sovellukset/viikko6/: index.html
2024-Q1-web-sovellukset/viikko7/: index.html
2024-Q1-web-sovellukset/viikko8/: index.html
2024-Q2-web-ohjelmoinnin-projekti/src/: App.css  App.jsx  Theme.jsx  index.css  main.jsx  media.css
2024-Q3-web-mobiili/: README.md
viikko1/: kotitehtava1.cpp
viikko2/nonqtarvauspeli/: Game.cpp  Game.h  nonqtarvauspeli.pro
viikko3/italianchef/: chef.h  italianchef.h  main.cpp
viikko4/talo/: asunto.cpp  asunto.h  katutaso.cpp  katutaso.h  kerros.cpp  talo.pro  (+2 more)
(+109 files in other folders)
